[package]
name = "maze_runner_rs"
version = "0.1.0"
edition = "2021"
description = "A simple text-based maze game library"
license = "MIT"
repository = "https://github.com/enumura1/maze_runner_rs"
readme = "README.md"

[lib]
name = "maze_runner_rs"
path = "src/lib.rs"

[[bin]]
name = "maze_runner_rs_bin"
path = "src/main.rs"

[dependencies]
rand = "0.9.0"
